--- a/css/header.css
+++ b/css/header.css
@@ -1,20 +1,3 @@
-body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  margin: 0px;
-  padding: 0px;
-}
-
-ul {
-  margin: 0px;
-  padding: 0px;
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
 .header-bg {
   background-color: #f2aae0;
 }
@@ -70,6 +53,12 @@ a {
 }
 
 @media (max-width: 760px) {
+  .header {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 32px;
+    justify-content: space-evenly;
+  }
   .header-logo {
     order: -2;
   }
@@ -85,7 +74,7 @@ a {
     display: none;
   }
   .header-menu a:hover {
-    background-color: #e58ae5;
+    background-color: #f2d9e9;
   }
   .header-extra {
     order: -1;
@@ -94,10 +83,20 @@ a {
 
 @media (max-width: 550px) {
   .header-menu {
-    gap: 12px;
+    justify-content: center;
   }
   .header-menu a {
     padding: 8px 12px;
     font-size: 1rem;
+    display: grid;
+    justify-items: center;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  }
+}
+
+@media (max-width: 430px) {
+  .header-menu a {
+    grid-template-columns: repeat(auto-fit, minmax(6rem, 1fr));
   }
 }
