--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,5 @@
 .header-bg {
-  background-color: #f2aae0;
+  background-color: var(--cor-5);
 }
 
 .header {
@@ -23,10 +23,7 @@
 }
 
 .header-menu a {
-  font-family: grandstander;
-  font-size: 1.25rem;
-  font-weight: 500;
-  color: #3d158c;
+  color: var(--cor-11);
   padding: 20px 0px;
   position: relative;
 }
@@ -36,7 +33,8 @@
   display: block;
   height: 2px;
   width: 0px;
-  background-color: #3d158c;
+  border-radius: 4px;
+  background-color: var(--cor-11);
   transition: 0.3s;
   position: absolute;
 }
@@ -66,7 +64,7 @@
     gap: 20px;
   }
   .header-menu a {
-    background-color: #f2c2e2;
+    background-color: var(--cor-4);
     padding: 12px 16px;
     border-radius: 4px;
   }
