--- a/css/tipografia.css
+++ b/css/tipografia.css
@@ -1,12 +1,63 @@
+.item-menu {
+  font-family: "grandstander";
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 32px;
+}
+
 .titulo {
-  font-family: Grandstander;
+  color: var(--cor-11);
+  font-family: "grandstander";
   font-size: 3.75rem;
   font-weight: 700;
   line-height: 1.125;
 }
 
 .subtitulo {
+  color: var(--cor-10);
   font-size: 1.5rem;
   font-weight: 400;
   line-height: 1.5;
+}
+
+.preco-titulo {
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 32px;
+}
+
+.preco-valor {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 32px;
+}
+
+.link-saiba-mais {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 32px;
+}
+
+.depoimento-descricao {
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 60px;
+}
+
+.depoimento-nome {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 28px;
+}
+
+.rodape-titulo {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 24px;
+}
+
+.rodape-descricao {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 40px;
 }
