--- a/css/pelucias-home.css
+++ b/css/pelucias-home.css
@@ -2,3 +2,51 @@
   background-color: var(--cor-3);
   overflow: hidden;
 }
+
+.pelucias-home {
+  box-sizing: border-box;
+  padding-top: 60px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 120px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.pelucias-selecao {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+  justify-content: center;
+}
+
+.pelucias-home-quadrado {
+  height: 500px;
+  width: 420px;
+  background-color: var(--cor-4);
+  border: solid 4px var(--cor-5);
+  border-radius: 20px;
+}
+
+.pelucias-home-quadrado img {
+  max-width: 80%;
+  display: block;
+  padding: 40px 40px 32px 40px;
+  border-radius: 20px;
+}
+
+.pelucias-home h2 {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.produto-preco {
+  color: var(--cor-12);
+  padding: 0px 40px;
+}
+
+.produto-valor {
+  color: var(--cor-9);
+  padding: 0px 0px 40px 40px;
+}
