--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,4 @@
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 0px;
   padding: 0px;
   padding-bottom: 600px;
@@ -8,6 +6,8 @@ body {
 
 ul,
 h1,
+h2,
+h3,
 p {
   margin: 0px;
   padding: 0px;
