--- a/css/introducao.css
+++ b/css/introducao.css
@@ -29,23 +29,28 @@
   padding-bottom: 120px;
 }
 
-.introducao h1 {
+.introducao-conteudo h1 {
   padding-bottom: 32px;
+  position: relative;
 }
 
-.introducao p {
+.introducao-conteudo h1:after {
+  content: "";
+  height: 68px;
+  width: 68px;
+  background-image: url(/img-icone/bolinhas/bolinha-intro.svg);
+  position: absolute;
+  top: -50px;
+  right: -50px;
+}
+
+.introducao-conteudo p {
   padding-bottom: 40px;
 }
 
-@media (max-width: 1200px) {
-  .introducao h1 {
-    font-size: 3rem;
-  }
-}
-
-@media (max-width: 830px) {
-  .introducao p {
-    font-size: 1.25rem;
+@media (max-width: 1300px) {
+  .introducao-conteudo h1:after {
+    display: none;
   }
 }
 
@@ -59,7 +64,6 @@
     padding-bottom: 60px;
   }
   .introducao h1 {
-    font-size: 2.5rem;
     padding-bottom: 24px;
   }
   .introducao p {
