--- a/css/tipografia.css
+++ b/css/tipografia.css
@@ -1,63 +1,67 @@
 .item-menu {
-  font-family: "grandstander";
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 32px;
+  color: var(--cor-11);
+  font: 500 1.25rem/32px "Grandstander";
 }
 
 .titulo {
   color: var(--cor-11);
-  font-family: "grandstander";
-  font-size: 3.75rem;
-  font-weight: 700;
-  line-height: 1.125;
+  font: 700 3.75rem/1.125 "Grandstander";
 }
 
 .subtitulo {
   color: var(--cor-10);
-  font-size: 1.5rem;
-  font-weight: 400;
-  line-height: 1.5;
+  font: 400 1.5rem/1.5 "Roboto";
 }
 
 .preco-titulo {
-  font-weight: 600;
-  font-size: 32px;
-  line-height: 32px;
+  color: var(--cor-12);
+  font: 600 2rem/32px "Roboto";
 }
 
 .preco-valor {
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 32px;
+  color: var(--cor-9);
+  font: 400 1.5rem/32px "Roboto";
 }
 
 .link-saiba-mais {
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 32px;
+  color: var(--cor-12);
+  font: 700 2rem/32px "Roboto";
 }
 
 .depoimento-descricao {
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 60px;
+  color: var(--cor-11);
+  font: 400 2rem/60px "Roboto";
 }
 
 .depoimento-nome {
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 28px;
+  color: var(--cor-9);
+  font: 600 1.5rem/28px "Roboto";
 }
 
 .rodape-titulo {
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 24px;
+  color: var(--cor-3);
+  font: 600 1.5rem/24px "Grandstander";
 }
 
 .rodape-descricao {
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 40px;
+  color: var(--cor-4);
+  font: 400 1.25rem/40px "Roboto";
+}
+
+@media (max-width: 1200px) {
+  .titulo {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 900px) {
+  .subtitulo {
+    font-size: 1.25rem;
+  }
+}
+
+@media (max-width: 760px) {
+  .titulo {
+    font-size: 2.5rem;
+  }
 }
