--- a/css/componentes.css
+++ b/css/componentes.css
@@ -1,3 +1,11 @@
+/* CONTAINER */
+.container {
+  box-sizing: border-box;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* BOTÃO */
 .botao {
   color: var(--cor-12);
