--- a/css/tipografia.css
+++ b/css/tipografia.css
@@ -5,12 +5,12 @@
 
 .titulo {
   color: var(--cor-11);
-  font: 700 3.75rem/1.125 "Grandstander";
+  font: 700 3.75rem/3.75rem "Grandstander";
 }
 
 .subtitulo {
   color: var(--cor-10);
-  font: 400 1.5rem/1.5 "Roboto";
+  font: 400 1.5rem/3rem "Roboto";
 }
 
 .preco-titulo {
@@ -23,8 +23,8 @@
   font: 400 1.5rem/32px "Roboto";
 }
 
-.link-saiba-mais {
-  color: var(--cor-12);
+.saiba-mais {
+  color: var(--cor-11);
   font: 700 2rem/32px "Roboto";
 }
 
