--- a/css/detalhes-custom-home.css
+++ b/css/detalhes-custom-home.css
@@ -60,8 +60,44 @@
 }
 
 .detalhes-custom-imagem img {
+  object-fit: cover;
   width: 100%;
   height: 100%;
   margin: 0 auto;
   border-radius: 4% 0 0 4%;
+}
+
+@media (max-width: 1400px) {
+  .detalhes-custom-conteudo {
+    padding-left: 40px;
+  }
+  .detalhes-custom-conteudo h2:before {
+    display: none;
+  }
+}
+
+@media (max-width: 1000px) {
+  .detalhes-custom-bg {
+    box-shadow: initial;
+  }
+  .detalhes-custom {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+  .detalhes-custom-conteudo {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+  .detalhes-custom-imagem img {
+    max-height: 600px;
+    border-radius: 0 0 2% 2%;
+  }
+}
+
+@media (max-width: 700px) {
+  .detalhes-custom-imagem img {
+    display: none;
+  }
 }
