--- a/css/tipografia.css
+++ b/css/tipografia.css
@@ -52,9 +52,12 @@
   .titulo {
     font-size: 3rem;
   }
+  .saiba-mais {
+    font-size: 1.5rem;
+  }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1000px) {
   .subtitulo {
     font-size: 1.25rem;
   }
