--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,5 @@
 @import "/css/introducao.css";
 @import "/css/pelucias-home.css";
 @import "/css/detalhes-custom-home.css";
+@import "/css/croche-home.css";
+@import "/css/depoimento.css";
