--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,5 @@
 body {
+  background-color: var(--cor-3);
   margin: 0px;
   padding: 0px;
   padding-bottom: 600px;
@@ -8,7 +9,8 @@ ul,
 h1,
 h2,
 h3,
-p {
+p,
+blockquote {
   margin: 0px;
   padding: 0px;
   list-style: none;
