--- a/css/depoimento.css
+++ b/css/depoimento.css
@@ -2,4 +2,89 @@
   background-color: var(--cor-6);
   display: grid;
   grid-template-columns: 1fr 1fr;
+  border-radius: 20px;
+}
+
+.depoimento img {
+  display: block;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  border-radius: 3% 0 0 3%;
+}
+
+.depoimento-conteudo {
+  padding: 80px 80px 80px 90px;
+  align-self: end;
+  position: relative;
+}
+
+.depoimento-conteudo blockquote::before {
+  content: "";
+  height: 68px;
+  width: 68px;
+  background-image: url(/img-icone/bolinhas/bolinha2.svg);
+  position: absolute;
+  right: 50px;
+  top: 50px;
+}
+
+.depoimento-conteudo p:first-child {
+  font-style: italic;
+  max-width: 550px;
+  padding-bottom: 16px;
+  position: relative;
+}
+
+.depoimento-conteudo p:first-child:before {
+  content: "“";
+  font-family: "Grandstander";
+  font-size: 80px;
+  color: var(--cor-8);
+  position: absolute;
+  left: -48px;
+}
+
+.depoimento-conteudo p:first-child::after {
+  content: "”";
+  font-family: "Grandstander";
+  font-size: 80px;
+  color: var(--cor-8);
+  position: absolute;
+  bottom: -32px;
+}
+
+@media (max-width: 1250px) {
+  .depoimento-conteudo blockquote::before {
+    display: none;
+  }
+}
+
+@media (max-width: 1200px) {
+  .depoimento-conteudo {
+    padding: 48px 40px 40px 60px;
+  }
+}
+
+@media (max-width: 760px) {
+  .depoimento {
+    grid-template-columns: 1fr;
+  }
+  .depoimento img {
+    border-radius: 3% 3% 0 0;
+  }
+}
+
+@media (max-width: 550px) {
+  .depoimento-conteudo p:first-child::before,
+  .depoimento-conteudo p:first-child::after {
+    font-size: 60px;
+  }
+  .depoimento-conteudo p:first-child::before {
+    left: -24px;
+  }
+  .depoimento-conteudo p:first-child::after {
+    bottom: -16px;
+  }
 }
