--- a/css/tipografia.css
+++ b/css/tipografia.css
@@ -15,12 +15,12 @@
 
 .preco-titulo {
   color: var(--cor-12);
-  font: 600 2rem/32px "Roboto";
+  font: 600 1.8rem/32px "Roboto";
 }
 
 .preco-valor {
   color: var(--cor-9);
-  font: 400 1.5rem/32px "Roboto";
+  font: 400 1.2rem/32px "Roboto";
 }
 
 .saiba-mais {
@@ -55,6 +55,12 @@
   .saiba-mais {
     font-size: 1.5rem;
   }
+  .depoimento-descricao {
+    font-size: 1.5rem;
+  }
+  .depoimento-nome {
+    font-size: 1rem;
+  }
 }
 
 @media (max-width: 1000px) {
@@ -66,5 +72,15 @@
 @media (max-width: 760px) {
   .titulo {
     font-size: 2.5rem;
+  }
+}
+
+@media (max-width: 550px) {
+  .depoimento-descricao {
+    font-size: 1rem;
+    line-height: 2.5rem;
+  }
+  .depoimento-nome {
+    font-size: 0.8rem;
   }
 }
