--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,4 @@
 @import "/css/detalhes-custom-home.css";
 @import "/css/croche-home.css";
 @import "/css/depoimento.css";
+@import "/css/footer.css";
