--- a/css/detalhes-custom-home.css
+++ b/css/detalhes-custom-home.css
@@ -28,6 +28,7 @@
   width: 0px;
   border-radius: 4px;
   background-color: var(--cor-11);
+  bottom: -5px;
   transition: 0.3s;
   position: absolute;
 }
