--- a/css/tipografia.css
+++ b/css/tipografia.css
@@ -10,7 +10,7 @@
 
 .subtitulo {
   color: var(--cor-10);
-  font: 400 1.5rem/3rem "Roboto";
+  font: 400 1.5rem/3.5rem "Roboto";
 }
 
 .preco-titulo {
@@ -38,12 +38,12 @@
   font: 600 1.5rem/28px "Roboto";
 }
 
-.rodape-titulo {
+.footer-titulo {
   color: var(--cor-3);
   font: 600 1.5rem/24px "Grandstander";
 }
 
-.rodape-descricao {
+.footer-descricao {
   color: var(--cor-4);
   font: 400 1.25rem/40px "Roboto";
 }
@@ -66,6 +66,7 @@
 @media (max-width: 1000px) {
   .subtitulo {
     font-size: 1.25rem;
+    line-height: 2.5rem;
   }
 }
 
@@ -77,7 +78,7 @@
 
 @media (max-width: 550px) {
   .depoimento-descricao {
-    font-size: 1rem;
+    font-size: 1.25rem;
     line-height: 2.5rem;
   }
   .depoimento-nome {
