--- a/css/header.css
+++ b/css/header.css
@@ -8,7 +8,7 @@
   gap: 20px;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  padding: 20px 32px;
 }
 
 .header-menu {
