--- a/css/croche-home.css
+++ b/css/croche-home.css
@@ -39,6 +39,7 @@
   max-width: 75%;
   padding: 40px 40px 32px 40px;
   border-radius: 18%;
+  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.1));
 }
 
 .produto-preco {
