--- a/css/lojas.css
+++ b/css/lojas.css
@@ -15,18 +15,84 @@
 .lojas-local {
   background-color: var(--cor-2);
   border-radius: 20px;
+  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.1));
 }
 
 .lojas-local img {
   border-radius: 4% 4% 0 0;
 }
 
+.lojas-horario {
+  margin: 40px;
+}
+
+.lojas-horario {
+  background: url(/img-icone/icone-roxo/relogio.svg) no-repeat 0px 8px;
+  padding-left: 28px;
+}
+
 .lojas-texto {
-  padding: 40px;
+  margin-top: 40px;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+.lojas-titulo {
+  margin-bottom: 16px;
 }
 
 .lojas-descricao {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
+}
+
+.lojas-descricao .preco-valor {
+  border-left: solid 4px var(--cor-3);
+  border-radius: 4px;
+  padding-left: 12px;
+}
+
+.lojas-descricao p {
+  margin-bottom: 12px;
+}
+
+@media (max-width: 1000px) {
+  .lojas {
+    margin-bottom: 60px;
+  }
+  .lojas h2 {
+    margin-bottom: 32px;
+  }
+  .lojas-conteudo {
+    gap: 20px;
+  }
+  .lojas-horario {
+    margin: 20px;
+  }
+  .lojas-texto {
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .lojas-titulo {
+    margin-bottom: 12px;
+  }
+
+  .lojas-descricao {
+    gap: 16px;
+  }
+}
+
+@media (max-width: 800px) {
+  .lojas-conteudo {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 500px) {
+  .lojas-descricao {
+    grid-template-columns: 1fr;
+  }
 }
