--- a/css/formulario.css
+++ b/css/formulario.css
@@ -4,8 +4,28 @@
   gap: 20px;
 }
 
+.comissao-titulo {
+  padding-left: 12px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  position: relative;
+}
+
+.comissao-titulo::before {
+  content: "";
+  display: inline-block;
+  width: 5px;
+  height: 9px;
+  background-color: var(--cor-10);
+  border-radius: 4px;
+  margin-right: 8px;
+  position: absolute;
+  left: 2px;
+  bottom: 15.5px;
+}
+
 .form div {
-  padding-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .form label {
@@ -18,7 +38,9 @@
 
 .form input[type="text"],
 .form input[type="email"],
-.form textarea {
+.form textarea,
+.form input[type="file"],
+.form input[type="checkbox"] {
   font: 400 1rem/1.5 "Roboto", sans-serif;
   background-color: var(--cor-1);
   border: 2px solid var(--cor-3);
@@ -37,6 +59,26 @@
   box-shadow: 0 0 0 2px var(--cor-3);
 }
 
+.termos {
+  display: inline-block;
+  align-items: center;
+}
+
+.form input[type="file"] {
+  cursor: pointer;
+}
+
+.form input[type="checkbox"] {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.formulario-1 {
+  margin-bottom: 60px;
+}
+
 .form button {
   position: relative;
 }
@@ -48,8 +90,17 @@
   width: 68px;
   background-image: url(/img-icone/bolinhas/bolinha6.svg);
   position: absolute;
-  right: -270px;
+  right: -280px;
   bottom: -50px;
+}
+
+.termos {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.termos a {
+  text-decoration: underline;
 }
 
 @media (max-width: 1150px) {
