--- a/css/introducao.css
+++ b/css/introducao.css
@@ -30,7 +30,7 @@
   position: relative;
 }
 
-.introducao-conteudo h1::after {
+/* .introducao-conteudo h1::after {
   content: "";
   height: 68px;
   width: 68px;
@@ -38,17 +38,17 @@
   position: absolute;
   top: -50px;
   right: -50px;
-}
+} */
 
 .introducao-conteudo p {
   padding-bottom: 40px;
 }
 
-@media (max-width: 1300px) {
+/* @media (max-width: 1300px) {
   .introducao-conteudo h1::after {
     display: none;
   }
-}
+} */
 
 @media (max-width: 760px) {
   .introducao {
