--- a/css/croche-home.css
+++ b/css/croche-home.css
@@ -25,6 +25,7 @@
   background-color: var(--cor-4);
   border: solid 4px var(--cor-5);
   border-radius: 20px;
+  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.1));
 }
 
 .croche-home-quadrado:hover {
