--- a/css/pelucias-home.css
+++ b/css/pelucias-home.css
@@ -29,6 +29,7 @@
   background-color: var(--cor-4);
   border: solid 4px var(--cor-5);
   border-radius: 20px;
+  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.1));
 }
 
 .pelucias-home-quadrado:hover {
