--- a/css/header.css
+++ b/css/header.css
@@ -30,12 +30,13 @@
   height: 2px;
   width: 0px;
   border-radius: 4px;
+  margin-top: -4px;
   background-color: var(--cor-11);
   transition: 0.3s;
   position: absolute;
 }
 
-.header-menu a:hover:after,
+.header-menu a:hover::after,
 .header-menu a.ativo::after {
   width: 100%;
 }
